--- a/src/main/resources/api/CadastroRestaurante.yml
+++ b/src/main/resources/api/CadastroRestaurante.yml
@@ -7,5 +7,5 @@ servers:
   - url: http://localhost:8080
     description: Local server
 tags:
-  - name: Restaurante Api
+  - name: Restaurante
     description: Operacoes de cadastro e busca de restaurantes
